--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # Ignore appsettings for now
-*.json
+appsettings*
 
 # User-specific files
 *.rsuser
